--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="forms-container">
             <div class="signin-signup">
-                <form action="http://127.0.0.1:5500/home.html" class="sign-in-form" onsubmit="return validate()">
+                <form action="http://127.0.0.1:5500/trangChu.html" class="sign-in-form" onsubmit="return validate()">
                     <h2 class="title">Đăng nhập</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
@@ -39,7 +39,7 @@
                     </div>
                 </form>
 
-                <form action="http://127.0.0.1:5500/home.html" class="sign-up-form" onsubmit="return setInfor()">
+                <form action="http://127.0.0.1:5500/trangChu.html" class="sign-up-form" onsubmit="return setInfor()">
                     <h2 class="title">Đăng ký</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
