hoan thien login js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="forms-container">
             <div class="signin-signup">
-                <form action="http://127.0.0.1:5500/trangChu.html" class="sign-in-form" onsubmit="return validate()">
+                <form action="https://vanduy9491.github.io/formSignUp-SignIn/trangChu.html" class="sign-in-form" onsubmit="return validate()">
                     <h2 class="title">Đăng nhập</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
@@ -24,9 +24,6 @@
                         <i class="fas fa-lock"></i>
                         <input type="password" placeholder="Password" id="password">
                     </div>
-                    <!-- <button class="btn solid" onclick="login()">
-                        <a href="#" id="ok" ></a>Đăng nhập
-                    </button> -->
                     <input type="submit" class="btn solid" value="Đăng nhập">
                     <p class="social-text">Hoặc đăng nhập với:</p>
                     <div class="social-media">
@@ -39,7 +36,7 @@
                     </div>
                 </form>
 
-                <form action="http://127.0.0.1:5500/trangChu.html" class="sign-up-form" onsubmit="return setInfor()">
+                <form action="https://vanduy9491.github.io/formSignUp-SignIn/trangChu.html" class="sign-up-form" onsubmit="return setInfor()">
                     <h2 class="title">Đăng ký</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
@@ -57,9 +54,6 @@
                         <i class="fas fa-lock"></i>
                         <input type="password" placeholder="RePassword" id="rpw">
                     </div>
-                    <!-- <button class="btn solid" onclick="setInfor()">
-                        <a href="#"  ></a>Đăng Ký
-                    </button> -->
                     <input type="submit" class="btn solid" value="Đăng ký">
 
 
