--- a/trangChu.html
+++ b/trangChu.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.min.css">
+    <link rel="stylesheet" href="index.html">
 </head>
 
 <body>
