--- a/trangChu.html
+++ b/trangChu.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.min.css">
 </head>
 
-<body>
+<body onload="init()" >
     <div class="navbar">
         <div class="logo">
             <img src="image/pngwing.com.png" alt="Cổng đổ torii" width="150px">
